--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "bcrypt": "^5.0.1",
         "express": "^4.18.1",
         "jsonwebtoken": "^8.5.1",
-        "mongoose": "^6.5.2"
+        "mongoose": "^6.5.2",
+        "uid-safe": "^2.1.5"
     },
     "devDependencies": {
         "nodemon": "^2.0.19"
