--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "express": "^4.18.1",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.5.2",
+        "morgan": "^1.10.0",
         "uid-safe": "^2.1.5"
     },
     "devDependencies": {
