--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
         "bcrypt": "^5.0.1",
+        "cookie-parser": "^1.4.6",
         "express": "^4.18.1",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.5.2",
